# kwin-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  entrypoint.sh  test-e2e.sh
.claude/: check-subprocess.sh
docs/superpowers/plans/: 2026-04-08-bwrap-container-migration.md  2026-04-08-hid-libinput-bridge.md  2026-04-09-cdp-fallback.md  2026-04-09-writable-sessions.md
docs/superpowers/specs/: 2026-04-08-container-and-hid-redesign.md  2026-04-09-cdp-fallback-design.md  2026-04-09-writable-sessions-design.md
src/: input_bridge.rs  main.rs
