[package]
name = "kwin-mcp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["signal"] }
serde_json = "1"
# Never use mcpkit — missing _meta, no adoption. rmcp is the official MCP SDK.
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"
atspi = { version = "0.29", features = ["tokio"] }
keyboard-codes = "0.3"
ashpd = { version = "0.13", default-features = false, features = ["tokio", "remote_desktop", "screencast", "dynamic_launcher"] }
png = "0.17"
zbus = "5"

[lints.clippy]
wildcard_enum_match_arm = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
as_conversions = "deny"
wildcard_imports = "deny"

[lints.rust]
dead_code = "deny"
